Fix nav spacing

--- a/components/nav.module.scss
+++ b/components/nav.module.scss
@@ -1,6 +1,5 @@
 .header {
   border-bottom: solid 6px #f3ae56;
-  margin-bottom: 1rem;
 }
 
 .active svg {
